popupWindow and ManagerFragment

--- a/app/src/main/res/layout/item_pending.xml
+++ b/app/src/main/res/layout/item_pending.xml
@@ -1,121 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_item">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_item">
 
     <TextView
-        android:id="@+id/tv_adapter_pending_order"
+        android:id="@+id/tv_item_pending_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_8"
+        android:layout_marginRight="@dimen/dp_8"
         android:lines="1"
         android:text="@string/app_name"
         android:textColor="@color/colorGrayBlack"
         android:textSize="@dimen/sp_20" />
 
-    <ImageView
-        android:id="@+id/iv_adapter_pending_name"
-        android:layout_width="@dimen/dp_48"
-        android:layout_height="@dimen/dp_48"
+    <View
+        android:id="@+id/line_item_pending_1"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:layout_below="@+id/tv_item_pending_content_1"
         android:layout_marginTop="@dimen/dp_8"
+        android:background="@color/color_cut_line" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tv_item_pending_name"
+        android:layout_alignStart="@+id/tv_item_pending_name"
+        android:layout_below="@+id/tv_item_pending_name"
+        android:layout_marginTop="@dimen/dp_8"
+        android:text="time" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tv_item_pending_time"
+        android:layout_alignStart="@+id/tv_item_pending_time"
+        android:layout_below="@+id/tv_item_pending_time"
+        android:text="address" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tv_item_pending_address"
+        android:layout_alignStart="@+id/tv_item_pending_address"
+        android:layout_below="@+id/tv_item_pending_address"
+        android:layout_marginTop="@dimen/dp_8"
+        android:text="orderNo" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_content_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tv_item_pending_id"
+        android:layout_alignStart="@+id/tv_item_pending_id"
+        android:layout_below="@+id/tv_item_pending_id"
+        android:text="安装：" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_content_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_pending_content_title"
+        android:layout_toEndOf="@+id/tv_item_pending_content_title"
+        android:layout_toRightOf="@+id/tv_item_pending_content_title"
+        android:layout_below="@+id/tv_item_pending_id"
+        android:text="@string/wire" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_content_wire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_pending_content_1"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginRight="@dimen/dp_4"
+        android:layout_toEndOf="@+id/tv_item_pending_content_1"
+        android:layout_toRightOf="@+id/tv_item_pending_content_1"
+        android:text="0"
+        android:textColor="@color/colorBlueTheme" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_content_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_pending_content_wire"
+        android:layout_toEndOf="@+id/tv_item_pending_content_wire"
+        android:layout_toRightOf="@+id/tv_item_pending_content_wire"
+        android:text="@string/ge_middle" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_content_wireless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_pending_content_2"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginRight="@dimen/dp_4"
+        android:layout_toEndOf="@+id/tv_item_pending_content_2"
+        android:layout_toRightOf="@+id/tv_item_pending_content_2"
+        android:text="0"
+        android:textColor="@color/colorBlueTheme" />
+
+    <TextView
+        android:id="@+id/tv_item_pending_content_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_item_pending_content_wireless"
+        android:layout_toEndOf="@+id/tv_item_pending_content_wireless"
+        android:layout_toRightOf="@+id/tv_item_pending_content_wireless"
+        android:text="@string/ge" />
+
+    <LinearLayout
+        android:id="@+id/ll_item_pending_"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_adapter_pending_order"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_below="@+id/line_item_pending_1"
+        android:layout_marginTop="@dimen/dp_8"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_item_pending_map"
+                android:layout_width="@dimen/dp_32"
+                android:layout_height="@dimen/dp_32"
+                android:src="@drawable/ic_map_blue" />
+
+            <TextView
+                android:id="@+id/tv_item_pending_map"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_4"
+                android:text="@string/look_map" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_item_pending_phone"
+                android:layout_width="@dimen/dp_32"
+                android:layout_height="@dimen/dp_32"
+                android:src="@drawable/ic_phone_blue" />
+
+            <TextView
+                android:id="@+id/tv_item_pending_phone_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_4"
+                android:text="@string/app_name" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_item_pending_sign"
+                android:layout_width="@dimen/dp_32"
+                android:layout_height="@dimen/dp_32"
+                android:src="@drawable/ic_pending" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_4"
+                android:text="@string/pend" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_adapter_pending_name"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/dp_48"
-        android:layout_below="@+id/tv_adapter_pending_order"
-        android:layout_marginLeft="@dimen/dp_2"
-        android:layout_marginRight="@dimen/dp_2"
-        android:layout_marginTop="@dimen/dp_8"
-        android:layout_toEndOf="@+id/iv_adapter_pending_name"
-        android:layout_toRightOf="@+id/iv_adapter_pending_name"
-        android:gravity="center"
-        android:lines="1"
-        android:text="TextView"
-        android:textSize="@dimen/sp_18" />
-
-    <ImageView
-        android:id="@+id/iv_adapter_pending_call"
-        android:layout_width="@dimen/dp_48"
-        android:layout_height="@dimen/dp_48"
-        android:layout_marginTop="@dimen/dp_8"
-        android:layout_below="@+id/tv_adapter_pending_order"
-        android:layout_toEndOf="@+id/tv_adapter_pending_name"
-        android:layout_toRightOf="@+id/tv_adapter_pending_name"
-        app:srcCompat="@mipmap/ic_launcher" />
-
-    <ImageView
-        android:id="@+id/iv_adapter_pending_locate"
-        android:layout_width="@dimen/dp_48"
-        android:layout_height="@dimen/dp_48"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/iv_adapter_pending_name"
-        android:layout_marginTop="@dimen/dp_8"
-        app:srcCompat="@mipmap/ic_launcher" />
-
-    <TextView
-        android:id="@+id/tv_adapter_pending_time"
+        android:id="@+id/tv_item_pending_modify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:lines="1"
-        android:layout_alignTop="@+id/iv_adapter_pending_locate"
-        android:layout_toEndOf="@+id/iv_adapter_pending_locate"
-        android:layout_toRightOf="@+id/iv_adapter_pending_locate"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/tv_adapter_pending_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:lines="1"
-        android:layout_alignBottom="@+id/iv_adapter_pending_locate"
-        android:layout_toEndOf="@+id/iv_adapter_pending_locate"
-        android:layout_toRightOf="@+id/iv_adapter_pending_locate"
-        android:text="TextView" />
-
-    <ImageView
-        android:layout_width="@dimen/dp_48"
-        android:layout_height="@dimen/dp_48"
-        android:layout_marginTop="@dimen/dp_8"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:layout_below="@+id/iv_adapter_pending_locate"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/iv_adapter_pending_setting" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/iv_adapter_pending_setting"
-        android:layout_toRightOf="@+id/iv_adapter_pending_setting"
-        android:layout_toEndOf="@+id/iv_adapter_pending_setting"
-        android:id="@+id/tv_adapter_pending_order_type" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_adapter_pending_setting_content"
-        android:layout_alignBottom="@+id/iv_adapter_pending_setting"
-        android:layout_toRightOf="@+id/iv_adapter_pending_setting"
-        android:layout_toEndOf="@+id/iv_adapter_pending_setting" />
-
-    <TextView
-        android:text="@string/sign"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_8"
-        android:layout_below="@+id/tv_adapter_pending_setting_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/bg_sign"
-        android:id="@+id/btn_adapter_pending_sign" />
+        android:layout_alignTop="@+id/tv_item_pending_time"
+        android:layout_marginLeft="@dimen/dp_8"
+        android:layout_toEndOf="@+id/tv_item_pending_time"
+        android:layout_toRightOf="@+id/tv_item_pending_time"
+        android:text="@string/modify"
+        android:textColor="@color/colorRed"
+        android:visibility="gone" />
 
 </RelativeLayout>
