--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,8 @@
     <dimen name="dp_120">120dp</dimen>
 
     <dimen name="dp_160">160dp</dimen>
+    <dimen name="dp_176">176dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
 
     <dimen name="dp_240">240dp</dimen>
 
