--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -11,6 +11,7 @@
         android:layout_marginLeft="@dimen/dp_48"
         android:layout_marginRight="@dimen/dp_48"
         android:lines="1"
+        android:hint="请输入客户名称/订单号"
         android:background="@null"
         android:gravity="center"/>
 
