--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -11,6 +11,7 @@
         android:layout_marginLeft="@dimen/dp_48"
         android:layout_marginRight="@dimen/dp_48"
         android:lines="1"
+        android:textSize="@dimen/sp_16"
         android:hint="请输入客户名称/订单号"
         android:background="@null"
         android:gravity="center"/>
@@ -20,6 +21,7 @@
         android:layout_width="@dimen/dp_32"
         android:layout_height="@dimen/dp_32"
         android:layout_marginRight="@dimen/dp_8"
+        android:layout_marginEnd="@dimen/dp_8"
         android:src="@drawable/ic_search_gray"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
