--- a/app/src/main/res/layout/layout_load_more.xml
+++ b/app/src/main/res/layout/layout_load_more.xml
@@ -10,6 +10,7 @@
         android:id="@+id/pb_layout_load_more"
         android:layout_width="@dimen/dp_32"
         android:layout_height="@dimen/dp_32"
+        android:visibility="gone"
         />
 
     <TextView
@@ -20,6 +21,7 @@
         android:layout_marginStart="@dimen/dp_4"
         android:gravity="center"
         android:text="正在加载..."
+        android:visibility="gone"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/sp_16"/>
 
