--- a/app/src/main/res/layout/activity_custom_sign.xml
+++ b/app/src/main/res/layout/activity_custom_sign.xml
@@ -19,8 +19,7 @@
         <com.tianyigps.signviewlibrary.SignView
             android:id="@+id/sv_activity_custom_sign"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorWhite"/>
+            android:layout_height="match_parent"/>
 
         <LinearLayout
             android:id="@+id/ll_activity_custom_sign"
@@ -29,6 +28,7 @@
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="@dimen/dp_8"
             android:layout_marginRight="@dimen/dp_8"
+            android:layout_marginEnd="@dimen/dp_8"
             android:orientation="horizontal">
 
             <ImageView
