OrderTrackDialogFragment，但还未放在PendingDetails里 该Fragment封装为单例模式

--- a/app/src/main/res/layout/activity_order_track.xml
+++ b/app/src/main/res/layout/activity_order_track.xml
@@ -10,10 +10,11 @@
     <ListView
         android:id="@+id/lv_activity_order_track"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:divider="@color/colorNull"
-        android:padding="@dimen/dp_16"
         android:dividerHeight="0dp"
+        android:overScrollMode="never"
+        android:padding="@dimen/dp_16"
         android:scrollbars="none"/>
 
 </FrameLayout>
