--- a/app/src/main/res/drawable/ic_cycle_green.xml
+++ b/app/src/main/res/drawable/ic_cycle_green.xml
@@ -7,7 +7,7 @@
 
     <corners android:radius="@dimen/dp_64" />
 
-    <solid android:color="@color/colorGreen" />
+    <solid android:color="@color/colorBlueTheme" />
 
     <padding
         android:bottom="@dimen/dp_8"
