--- a/app/src/main/res/layout/item_pended.xml
+++ b/app/src/main/res/layout/item_pended.xml
@@ -106,13 +106,13 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/iv_item_pended_sign"
+                android:id="@+id/iv_item_pended_contact"
                 android:layout_width="@dimen/dp_32"
                 android:layout_height="@dimen/dp_32"
                 android:src="@drawable/ic_mobile"/>
 
             <TextView
-                android:id="@+id/tv_item_pended_custom"
+                android:id="@+id/tv_item_pended_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_4"
@@ -128,6 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/tv_item_pended_time"
         android:layout_marginLeft="@dimen/dp_8"
+        android:layout_marginStart="@dimen/dp_8"
         android:layout_toEndOf="@+id/tv_item_pended_time"
         android:layout_toRightOf="@+id/tv_item_pended_time"
         android:text="@string/modify"
