--- a/app/src/main/res/layout/activity_order_track.xml
+++ b/app/src/main/res/layout/activity_order_track.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.tianyigps.xiepeng.activity.OrderTrackActivity">
 
     <ListView
@@ -17,4 +18,10 @@
         android:padding="@dimen/dp_16"
         android:scrollbars="none"/>
 
-</FrameLayout>
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:background="@color/colorBlueTheme"/>-->
+
+</LinearLayout>
