--- a/app/src/main/res/layout/dialog_ask_sign.xml
+++ b/app/src/main/res/layout/dialog_ask_sign.xml
@@ -40,7 +40,8 @@
             android:layout_weight="1"
             android:background="@drawable/bg_button"
             android:gravity="center"
-            android:text="@string/ensure"/>
+            android:text="@string/ensure"
+            android:textColor="@color/colorWhite"/>
 
         <Button
             android:id="@+id/btn_dialog_ask_sign_cancel"
@@ -52,7 +53,8 @@
             android:layout_weight="1"
             android:background="@drawable/bg_button"
             android:gravity="center"
-            android:text="@string/cancel"/>
+            android:text="@string/cancel"
+            android:textColor="@color/colorWhite"/>
 
     </LinearLayout>
 
