--- a/app/src/main/res/layout/layout_order_details_content.xml
+++ b/app/src/main/res/layout/layout_order_details_content.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dp_40"
+        android:overScrollMode="never"
         android:scrollbars="none">
 
         <LinearLayout
