--- a/app/src/main/res/layout/activity_installing.xml
+++ b/app/src/main/res/layout/activity_installing.xml
@@ -8,14 +8,21 @@
     android:orientation="vertical"
     tools:context="com.tianyigps.dispatch2.activity.InstallingActivity">
 
-    <ListView
-        android:id="@+id/lv_activity_installing"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_activity_installing"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        android:layout_weight="1"
-        android:divider="@color/colorNull"
-        android:dividerHeight="@dimen/dp_16"
-        android:scrollbars="none"/>
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/lv_activity_installing"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="@dimen/dp_8"
+            android:layout_marginRight="@dimen/dp_8"
+            android:layout_weight="1"
+            android:divider="@color/colorNull"
+            android:dividerHeight="@dimen/dp_16"
+            android:scrollbars="none"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
