--- a/app/src/main/res/layout/activity_pend_details.xml
+++ b/app/src/main/res/layout/activity_pend_details.xml
@@ -21,7 +21,8 @@
         android:layout_marginBottom="@dimen/dp_16"
         android:layout_marginLeft="@dimen/dp_16"
         android:layout_marginRight="@dimen/dp_16"
-        android:layout_marginTop="120dp"/>
+        android:layout_marginTop="@dimen/dp_120"
+        />
 
     <include
         layout="@layout/layout_cycle_time"
