--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_scanner"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.tianyigps.dispatch2.activity.ScannerActivity">
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:id="@+id/activity_scanner"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context="com.tianyigps.dispatch2.activity.ScannerActivity">
 
-    <com.dlazaro66.qrcodereaderview.QRCodeReaderView
-        android:id="@+id/qrv_activity"
+    <!--<com.dlazaro66.qrcodereaderview.QRCodeReaderView-->
+    <!--android:id="@+id/qrv_activity"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
+
+    <!--<ImageView-->
+    <!--android:layout_width="@dimen/dp_240"-->
+    <!--android:layout_height="@dimen/dp_240"-->
+    <!--android:src="@drawable/bg_scanner"-->
+    <!--android:layout_gravity="center"/>-->
+
+    <me.dm7.barcodescanner.zbar.ZBarScannerView
+        android:id="@+id/zbsv_activity_scanner"
+        app:borderColor="@color/colorBlueTheme"
+        app:laserColor="@color/colorBlueTheme"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ImageView
-        android:layout_width="@dimen/dp_240"
-        android:layout_height="@dimen/dp_240"
-        android:src="@drawable/bg_scanner"
-        android:layout_gravity="center"/>
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
